--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: aqp
-Version: 0.80
-Date: 2010-05-07
+Version: 0.85
+Date: 2010-06-16
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
@@ -8,6 +8,8 @@ Depends: R (>= 2.8.0), plyr, reshape, lattice, cluster, sp
 Suggests: RColorBrewer, maptools, foreign
 Description: R package for working with and plotting soil profile data.
 License: GPL (>= 2)
-Packaged: 2010-05-08 21:22:17 UTC; sgtpepp
 Repository: CRAN
-Date/Publication: 2010-05-09 16:23:55
+Repository/R-Forge/Project: aqp
+Repository/R-Forge/Revision: 74
+Date/Publication: 2010-06-20 07:43:14
+Packaged: 2010-06-17 20:59:38 UTC; rforge
