--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: aqp
-Version: 0.90
-Date: 2010-07-13
+Version: 0.94
+Date: 2010-08-11
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
-Depends: R (>= 2.8.0), plyr, reshape, lattice, cluster, sp
+Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp
 Suggests: RColorBrewer, maptools, foreign
-Description: R package for working with and plotting soil profile data.
+Description: A collection of algorithms related to modeling of soil
+        resources, soil classification, soil profile aggregation, and
+        visualization.
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 88
-Date/Publication: 2010-07-24 20:08:58
-Packaged: 2010-07-14 20:42:24 UTC; rforge
+Repository/R-Forge/Revision: 97
+Date/Publication: 2010-08-14 16:54:18
+Packaged: 2010-08-12 20:42:27 UTC; rforge
