--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: aqp
-Version: 0.94-1
-Date: 2010-08-16
+Version: 0.97
+Date: 2010-09-22
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
 Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp
-Suggests: RColorBrewer, colorspace, maptools, foreign
+Suggests: RColorBrewer, colorspace, maptools, foreign, doMC, foreach
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
         visualization.
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 99
-Date/Publication: 2010-08-18 21:06:13
-Packaged: 2010-08-17 20:40:49 UTC; rforge
+Repository/R-Forge/Revision: 114
+Date/Publication: 2010-09-24 06:46:00
+Packaged: 2010-09-23 20:35:34 UTC; rforge
