--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: aqp
-Version: 0.97
-Date: 2010-09-22
+Version: 0.98-3
+Date: 2010-11-27
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
-Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp
+Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp, Hmisc
 Suggests: RColorBrewer, colorspace, maptools, foreign, doMC, foreach
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
@@ -12,6 +12,6 @@ Description: A collection of algorithms related to modeling of soil
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 114
-Date/Publication: 2010-09-24 06:46:00
-Packaged: 2010-09-23 20:35:34 UTC; rforge
+Repository/R-Forge/Revision: 152
+Date/Publication: 2010-11-28 06:24:52
+Packaged: 2010-11-27 21:42:22 UTC; rforge
