--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: aqp
-Version: 0.98-3
-Date: 2010-11-27
+Version: 0.99-1
+Date: 2011-01-26
 Title: Algorithms for Quantitative Pedology
-Author: Dylan Beaudette <debeaudette@ucdavis.edu>
-Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
+Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
+        <roudierp@landcareresearch.co.nz>
+Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
+        <roudierp@landcareresearch.co.nz>
 Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp, Hmisc
 Suggests: RColorBrewer, colorspace, maptools, foreign, doMC, foreach
 Description: A collection of algorithms related to modeling of soil
@@ -12,6 +14,6 @@ Description: A collection of algorithms related to modeling of soil
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 152
-Date/Publication: 2010-11-28 06:24:52
-Packaged: 2010-11-27 21:42:22 UTC; rforge
+Repository/R-Forge/Revision: 242
+Date/Publication: 2011-02-28 09:28:55
+Packaged: 2011-02-08 21:43:50 UTC; rforge
