--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: aqp
-Version: 0.99-1
-Date: 2011-01-26
+Version: 0.99-5
+Date: 2011-08-17
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
-Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp, Hmisc
-Suggests: RColorBrewer, colorspace, maptools, foreign, doMC, foreach
+Depends: R (>= 2.10), plyr, reshape, lattice, cluster, sp, Hmisc
+Suggests: RColorBrewer, colorspace, maptools, rgdal, foreign, MASS,
+        ape, plotrix, foreach, doMC, SSOAP, XML, RCurl
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
         visualization.
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 242
-Date/Publication: 2011-02-28 09:28:55
-Packaged: 2011-02-08 21:43:50 UTC; rforge
+Repository/R-Forge/Revision: 283
+Date/Publication: 2011-08-19 04:53:25
+Packaged: 2011-08-18 20:46:05 UTC; rforge
