--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: aqp
-Version: 0.99-5
-Date: 2011-08-17
+Version: 0.99-8
+Date: 2011-09-14
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
@@ -8,13 +8,13 @@ Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
 Depends: R (>= 2.10), plyr, reshape, lattice, cluster, sp, Hmisc
 Suggests: RColorBrewer, colorspace, maptools, rgdal, foreign, MASS,
-        ape, plotrix, foreach, doMC, SSOAP, XML, RCurl
+        ape, plotrix, foreach, doSMP, SSOAP, XML, RCurl, RODBC
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
         visualization.
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 283
-Date/Publication: 2011-08-19 04:53:25
-Packaged: 2011-08-18 20:46:05 UTC; rforge
+Repository/R-Forge/Revision: 295
+Date/Publication: 2011-09-16 20:09:10
+Packaged: 2011-09-15 20:48:13 UTC; rforge
