--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: aqp
-Version: 1.0
-Date: 2012-03-26
-Packaged: 2012-03-27 10:15:23 UTC; rforge
+Version: 1.2-5
+Date: 2012-06-20
+Packaged: 2012-06-20 18:17:40 UTC; rforge
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
-Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
-        <roudierp@landcareresearch.co.nz>
-Depends: R (>= 2.10), methods, plyr, reshape, lattice, grid, cluster,
-        sp, Hmisc, stringr
-Suggests: scales, RColorBrewer, colorspace, maptools, foreign, MASS,
-        ape, plotrix, rgeos, soilDB, latticeExtra, digest
+Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
+Depends: R (>= 2.10)
+Imports: methods, plyr, reshape, grid, lattice, cluster, sp, Hmisc,
+        stringr, scales
+Suggests: RColorBrewer, colorspace, maptools, foreign, MASS, ape,
+        plotrix, rgeos, soilDB, latticeExtra, digest, lattice
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
         visualization.
 License: GPL (>= 2)
 Repository: CRAN
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 531
-Date/Publication: 2012-03-27 15:58:26
+Repository/R-Forge/Revision: 562
+Date/Publication: 2012-06-21 05:40:54
