--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,24 @@
 Package: aqp
-Version: 1.4
-Date: 2012-12-18
-Packaged: 2012-12-19 23:15:28 UTC; rforge
+Version: 1.5
+Date: 2013-02-25
+Packaged: 2013-02-26 03:15:08 UTC; rforge
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>, Pierre Roudier
         <roudierp@landcareresearch.co.nz>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
-Depends: R (>= 2.10)
+Depends: R (>= 2.14.0)
 Imports: methods, plyr, reshape, grid, lattice, cluster, sp, Hmisc,
-        stringr, scales
+        stringr, scales, plotrix
 Suggests: RColorBrewer, colorspace, maptools, foreign, MASS, ape,
-        plotrix, rgeos, soilDB, latticeExtra, digest, lattice, maps
+        rgeos, soilDB, latticeExtra, digest, lattice, maps
 Description: A collection of algorithms related to modeling of soil
         resources, soil classification, soil profile aggregation, and
         visualization.
 License: GPL (>= 2)
 Repository: CRAN
+URL: http://aqp.r-forge.r-project.org/
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 622
-Repository/R-Forge/DateTimeStamp: 2012-12-19 19:43:19
-Date/Publication: 2012-12-21 08:06:14
+Repository/R-Forge/Revision: 664
+Repository/R-Forge/DateTimeStamp: 2013-02-26 00:44:24
+Date/Publication: 2013-02-26 22:10:34
+NeedsCompilation: no
