--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,13 @@ importFrom(graphics,
 )
 
 importFrom(plyr, 
+  idata.frame,
   ddply,
   llply,
   ldply,
   dlply,
   join,
-	summarise
+  summarise
 )
 
 importFrom(reshape, 
@@ -56,13 +57,18 @@ importFrom(sp,
 )
 
 importFrom(Hmisc, 
-  wtd.mean, 
+  hdquantile,
+	wtd.mean, 
   wtd.var, 
   wtd.quantile, 
   wtd.rank, 
   wtd.table
 )
 
+importFrom(plotrix, 
+  soil.texture,
+	triax.points
+)
 
 exportClasses(SoilProfileCollection)
 
